--- a/payloads/poops/Makefile
+++ b/payloads/poops/Makefile
@@ -1,4 +1,4 @@
-JAR_NAME := Lapse.jar
+JAR_NAME := Poops.jar
 
 MAKEFILE_DIR := $(dir $(realpath $(lastword $(MAKEFILE_LIST))))
 BDJSDK_HOME  ?= $(MAKEFILE_DIR)/../../../../
@@ -8,7 +8,7 @@ JAR          := $(JAVA8_HOME)/bin/jar
 
 export JAVA8_HOME
 
-CLASSPATH     := $(BDJSDK_HOME)/target/lib/enhanced-stubs.zip:$(BDJSDK_HOME)/target/lib/bdjstack.jar:$(BDJSDK_HOME)/target/lib/rt.jar:../../discdir/BDMV/JAR/00000.jar
+CLASSPATH     := $(BDJSDK_HOME)/target/lib/enhanced-stubs.zip:$(BDJSDK_HOME)/target/lib/bdjstack.jar:$(BDJSDK_HOME)/target/lib/rt.jar:../../discdir/BDMV/JAR/00000.jar:../../src/
 SOURCES       := $(wildcard src/org/bdj/external/*.java)
 JFLAGS        := -Xlint:-options -source 1.4 -target 1.4
 
